SET(DOXYGEN_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
SET(DOXYGEN_OUTPUT_DIR ${VLE_BINARY_DIR}/doxygen)
CONFIGURE_FILE(doxygen.conf.in ${VLE_BINARY_DIR}/doxygen.conf)

ADD_CUSTOM_COMMAND(
  OUTPUT ${VLE_BINARY_DIR}/doxygen/html
  DEPENDS ${VLE_BINARY_DIR}/doxygen.conf
  COMMAND ${DOXYGEN}
  ARGS ${VLE_BINARY_DIR}/doxygen.conf)

ADD_CUSTOM_TARGET(doc ALL DEPENDS ${VLE_BINARY_DIR}/doxygen.conf
  ${VLE_BINARY_DIR}/doxygen/html VERBATIM)

INSTALL(DIRECTORY ${VLE_BINARY_DIR}/doxygen/html
  DESTINATION ${VLE_SHARE_DIRS}/doc
  PATTERN "CMakeFiles" EXCLUDE
  PATTERN "html")
