SET(DOXYGEN_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")
SET(DOXYGEN_OUTPUT_DIR "${VLE_BINARY_DIR}/doxygen")
IF (WIN32)
  FIND_PACKAGE(HTMLHelp)
  IF (HTML_HELP_COMPILER)
    SET(DOXYGEN_BUILD_CHM "YES")
  ENDIF (HTML_HELP_COMPILER)
ENDIF (WIN32)

CONFIGURE_FILE(doxygen.conf.in "${VLE_BINARY_DIR}/doxygen.conf")
FILE(MAKE_DIRECTORY "${VLE_BINARY_DIR}/doxygen/html")

ADD_CUSTOM_COMMAND(
  OUTPUT "${VLE_BINARY_DIR}/doxygen/html/index.html"
  DEPENDS "${VLE_BINARY_DIR}/doxygen.conf"
  COMMAND "${DOXYGEN}"
  ARGS "${VLE_BINARY_DIR}/doxygen.conf")

ADD_CUSTOM_TARGET(doc ALL DEPENDS "${VLE_BINARY_DIR}/doxygen.conf"
  "${VLE_BINARY_DIR}/doxygen/html/index.html" VERBATIM)


IF (WIN32)
  IF (HTML_HELP_COMPILER)
    SET(TMP "${VLE_BINARY_DIR}\\doxygen\\html\\index.hhp")
    STRING(REGEX REPLACE "[/]" "\\\\" HHP_FILE ${TMP} )
    ADD_CUSTOM_TARGET(winhelp "${HTML_HELP_COMPILER}" "${HHP_FILE}")
    ADD_DEPENDENCIES (winhelp doc)

    IF (EXISTS "${VLE_BINARY_DIR}/doxygen/html/vle.chm")
      INSTALL(FILES "${VLE_BINARY_DIR}/doxygen/html/vle.chm"
	    DESTINATION "${VLE_SHARE_DIRS}/doc")
    ENDIF (EXISTS "${VLE_BINARY_DIR}/doxygen/html/vle.chm")

  ENDIF(HTML_HELP_COMPILER)
ELSE (WIN32)
  INSTALL(DIRECTORY "${VLE_BINARY_DIR}/doxygen/html"
    DESTINATION "${VLE_SHARE_DIRS}/doc")
ENDIF (WIN32)

