ADD_SUBDIRECTORY(doc)
ADD_SUBDIRECTORY(pixmaps)
ADD_SUBDIRECTORY(dtd)
ADD_SUBDIRECTORY(template)
ADD_SUBDIRECTORY(cmake)

CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/gvle.rc.in
  ${CMAKE_CURRENT_BINARY_DIR}/gvle.rc @ONLY)

CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/vfl.rc.in
  ${CMAKE_CURRENT_BINARY_DIR}/vfl.rc @ONLY)

CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/vle.rc.in
  ${CMAKE_CURRENT_BINARY_DIR}/vle.rc @ONLY)

install(FILES convert-vpz11-vpz12.py DESTINATION
  "${VLE_SHARE_DIRS}/scripts")
